--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "cloudless-lists",
+	"name": "Cloudless Lists Plugin",
+	"version": "0.0.2",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "",
+	"author": "CloudlessOne",
+	"authorUrl": "https://cloudles.one",
+	"fundingUrl": "https://cloudles.one/pricing",
 	"isDesktopOnly": false
 }
